--- a/partials/monitor.html
+++ b/partials/monitor.html
@@ -1,25 +1,52 @@
 <md-content class="md-padding" layout="row" layout-align="center center" layout-fill>
+	<!-- <md-card flex>
+		<md-toolbar class="md-table-toolbar md-default">
+			<div class="md-toolbar-tools">
+				<h2 class="md-title">Menu</h2>
+			</div>
+		</md-toolbar>
+		<md-card-content>
+			<md-input-container style="width: 100%">
+				<label>OLT</label>
+				<md-select ng-model="oltIdSelected" ng-change="oltSelectedEvent(oltIdSelected)">
+					<md-option ng-repeat="_olt in olt track by _olt.id" ng-value="_olt.id">
+						{{_olt.label}} | {{_olt.ipAddress}}
+					</md-option>
+				</md-select>
+			</md-input-container>
+		</md-card-content>
+	</md-card> -->
 	<md-card flex="40">
 		<md-toolbar class="md-table-toolbar md-default">
 			<div class="md-toolbar-tools">
 				<h2 class="md-title">Monitor ONU Optical Power</h2>
 			</div>
 		</md-toolbar>
-		<md-table-container>
-			<table md-table>
-				<thead md-head>
-					<tr md-row>
-						<th md-column>Serial Name</th>
-						<th md-column md-numeric>Optical Power</th>
-					</tr>
-				</thead>
-				<tbody md-body>
-					<tr md-row ng-repeat="x in powers">
-						<td md-cell>{{x.serial}}</td>
-						<td md-cell>{{x.power}} dB</td>
-					</tr>
-				</tbody>
-			</table>
-		</md-table-container>
+		<md-card-content>
+			<md-input-container style="width: 100%">
+				<label>OLT</label>
+				<md-select ng-model="oltIdSelected" ng-change="oltSelectedEvent(oltIdSelected)">
+					<md-option ng-repeat="_olt in olt track by _olt.id" ng-value="_olt.id">
+						{{_olt.label}} | {{_olt.ipAddress}}
+					</md-option>
+				</md-select>
+			</md-input-container>
+			<md-table-container ng-show="oltIdSelected">
+				<table md-table>
+					<thead md-head>
+						<tr md-row>
+							<th md-column>Serial Name</th>
+							<th md-column md-numeric>Optical Power</th>
+						</tr>
+					</thead>
+					<tbody md-body>
+						<tr md-row ng-repeat="x in powers">
+							<td md-cell>{{x.serial}}</td>
+							<td md-cell>{{x.power}} dB</td>
+						</tr>
+					</tbody>
+				</table>
+			</md-table-container>
+		</md-card-content>
 	</md-card>
 </md-content>
