--- a/partials/bandwidth.html
+++ b/partials/bandwidth.html
@@ -5,38 +5,47 @@
 				<h2 class="md-title">ONU Bandwidth</h2>
 			</div>
 		</md-toolbar>
-		<md-table-container>
-			<table md-table>
-				<thead md-head>
-					<tr md-row>
-						<th md-column>Serial Name</th>
-						<th md-column>Slot</th>
-						<th md-column md-numeric>Download</th>
-						<th md-column md-numeric>Upload</th>
-						<th md-column md-numeric flex="10">Action</th>
-					</tr>
-				</thead>
-				<tbody md-body>
-					<tr md-row ng-repeat="x in powers">
-						<td md-cell>{{x.sn}}</td>
-						<td md-cell>{{x.slotOltOnuUni}}</td>
-						<td md-cell>
-							<md-select ng-model="x.idEgressPolicy" placeholder="Bandwidth" class="">
-					        		<md-option ng-repeat="p in policy" value="{{p.id}}">{{p.cir}}</md-option>
-					        </md-select>
-						</td>
-						<td md-cell>
-							<md-select ng-model="x.idIngressPolicy" placeholder="Bandwidth" class="">
-					        		<md-option ng-repeat="p in policy" value="{{p.id}}">{{p.cir}}</md-option>
-					        </md-select>
-						<td md-cell>
-							<md-button class="md-primary md-raised" 
-								style="margin-right:0px"
-								ng-click="update(x)">Update</md-button>
-						</td>
-					</tr>
-				</tbody>
-			</table>
-		</md-table-container>
+		<md-card-content>
+			<md-input-container style="width: 100%">
+				<label>OLT</label>
+				<md-select ng-model="oltIdSelected" ng-change="oltSelectedEvent(oltIdSelected)">
+					<md-option ng-repeat="_olt in olt track by _olt.id" ng-value="_olt.id">
+						{{_olt.label}} | {{_olt.ipAddress}}
+					</md-option>
+				</md-select>
+			</md-input-container>
+			<md-table-container ng-show="oltIdSelected">
+				<table md-table>
+					<thead md-head>
+						<tr md-row>
+							<th md-column>Serial Name</th>
+							<th md-column>Slot</th>
+							<th md-column md-numeric>Download</th>
+							<th md-column md-numeric>Upload</th>
+							<th md-column md-numeric flex="10">Action</th>
+						</tr>
+					</thead>
+					<tbody md-body>
+						<tr md-row ng-repeat="x in powers">
+							<td md-cell>{{x.sn}}</td>
+							<td md-cell>{{x.slotOltOnuUni}}</td>
+							<td md-cell>
+								<md-select ng-model="x.idEgressPolicy" placeholder="Bandwidth" class="">
+									<md-option ng-repeat="p in policy" value="{{p.id}}">{{p.cir}}</md-option>
+								</md-select>
+							</td>
+							<td md-cell>
+								<md-select ng-model="x.idIngressPolicy" placeholder="Bandwidth" class="">
+									<md-option ng-repeat="p in policy" value="{{p.id}}">{{p.cir}}</md-option>
+								</md-select>
+							<td md-cell>
+								<md-button class="md-primary md-raised" style="margin-right:0px" ng-click="update(x)">
+									Update</md-button>
+							</td>
+						</tr>
+					</tbody>
+				</table>
+			</md-table-container>
+		</md-card-content>
 	</md-card>
 </md-content>
