--- a/partials/register.html
+++ b/partials/register.html
@@ -5,25 +5,34 @@
 				<h2 class="md-title">Register ONU</h2>
 			</div>
 		</md-toolbar>
-		<md-table-container>
-			<table md-table>
-				<thead md-head>
-					<tr md-row>
-						<th md-column>Serial Name</th>
-						<th md-column md-numeric flex="10">Action</th>
-					</tr>
-				</thead>
-				<tbody md-body>
-					<tr md-row ng-repeat="x in powers">
-						<td md-cell>{{x.serial}}</td>
-						<td md-cell>
-							<md-button class="md-primary md-raised" 
-								style="margin-right:0px"
-								ng-click="reboot(x, $event)">Register</md-button>
-						</td>
-					</tr>
-				</tbody>
-			</table>
-		</md-table-container>
+		<md-card-content>
+			<md-input-container style="width: 100%">
+				<label>OLT</label>
+				<md-select ng-model="oltIdSelected" ng-change="oltSelectedEvent(oltIdSelected)">
+					<md-option ng-repeat="_olt in olt track by _olt.id" ng-value="_olt.id">
+						{{_olt.label}} | {{_olt.ipAddress}}
+					</md-option>
+				</md-select>
+			</md-input-container>
+			<md-table-container ng-show="oltIdSelected">
+				<table md-table>
+					<thead md-head>
+						<tr md-row>
+							<th md-column>Serial Name</th>
+							<th md-column md-numeric flex="10">Action</th>
+						</tr>
+					</thead>
+					<tbody md-body>
+						<tr md-row ng-repeat="x in powers">
+							<td md-cell>{{x.serial}}</td>
+							<td md-cell>
+								<md-button class="md-primary md-raised" style="margin-right:0px"
+									ng-click="reboot(x, $event)">Register</md-button>
+							</td>
+						</tr>
+					</tbody>
+				</table>
+			</md-table-container>
+		</md-card-content>
 	</md-card>
 </md-content>
