--- a/partials/suspend.html
+++ b/partials/suspend.html
@@ -5,28 +5,37 @@
 				<h2 class="md-title">Enable/Suspend ONU</h2>
 			</div>
 		</md-toolbar>
-		<md-table-container>
-			<table md-table>
-				<thead md-head>
-					<tr md-row>
-						<th md-column flex>Slot ONU</th>
-						<th md-column md-numeric flex="10">Status</th>
-					</tr>
-				</thead>
-				<tbody md-body>
-					<tr md-row ng-repeat="x in powers">
-						<td md-cell>{{x.slot}}</td>
-						<td md-cell layout="row">
-							<div flex>
-  							</div>
-							<md-switch ng-model="x.state" aria-label="Switch"
-								style="margin-right:-8px"
-								ng-change="suspend(x)">	
-							</md-switch>
-						</td>
-					</tr>
-				</tbody>
-			</table>
-		</md-table-container>
+		<md-card-content>
+			<md-input-container style="width: 100%">
+				<label>OLT</label>
+				<md-select ng-model="oltIdSelected" ng-change="oltSelectedEvent(oltIdSelected)">
+					<md-option ng-repeat="_olt in olt track by _olt.id" ng-value="_olt.id">
+						{{_olt.label}} | {{_olt.ipAddress}}
+					</md-option>
+				</md-select>
+			</md-input-container>
+			<md-table-container ng-show="oltIdSelected">
+				<table md-table>
+					<thead md-head>
+						<tr md-row>
+							<th md-column flex>Slot ONU</th>
+							<th md-column md-numeric flex="10">Status</th>
+						</tr>
+					</thead>
+					<tbody md-body>
+						<tr md-row ng-repeat="x in powers">
+							<td md-cell>{{x.slot}}</td>
+							<td md-cell layout="row">
+								<div flex>
+								</div>
+								<md-switch ng-model="x.state" aria-label="Switch" style="margin-right:-8px"
+									ng-change="suspend(x)">
+								</md-switch>
+							</td>
+						</tr>
+					</tbody>
+				</table>
+			</md-table-container>
+		</md-card-content>
 	</md-card>
 </md-content>
