--- a/partials/policy.html
+++ b/partials/policy.html
@@ -4,45 +4,52 @@
 			<div class="md-toolbar-tools">
 				<h2 class="md-title">Policing Profile</h2>
 				<div flex></div>
-				<md-button class="md-icon-button" aria-label="Filter"
-					ng-click="add($event)"> 
+				<md-button class="md-icon-button" aria-label="Filter" ng-click="add($event)">
 					<md-icon class="material-icons">add</md-icon>
 				</md-button>
 			</div>
 		</md-toolbar>
-		<md-table-container>
-			<table md-table>
-				<thead md-head>
-					<tr md-row>
-						<th md-column>ID</th>
-						<th md-column>Name</th>
-						<th md-column md-numeric>CIR</th>
-						<th md-column md-numeric>PIR</th>
-						<th md-column md-numeric>PBS</th>
-						<th md-column md-numeric>CBS</th>
-						<th md-column md-numeric flex="10">Action</th>
-					</tr>
-				</thead>
-				<tbody md-body>
-					<tr md-row ng-repeat="x in powers">
-						<td md-cell>{{x.id}}</td>
-						<td md-cell>{{x.name}}</td>
-						<td md-cell>{{x.cir}}</td>
-						<td md-cell>{{x.pir}}</td>
-						<td md-cell>{{x.pbs}}</td>
-						<td md-cell>{{x.cbs}}</td>
-						<td md-cell>
-							<md-button class="md-primary md-raised" 
-								style="margin-right:0px"
-								ng-click="edit(x, $event)">Edit</md-button>
-							<md-button class="md-primary md-raised" 
-								style="margin-right:0px"
-								ng-click="remove(x, $event)">Delete</md-button>
-						</td>
-					</tr>
-					
-				</tbody>
-			</table>
-		</md-table-container>
+		<md-card-content>
+			<md-input-container style="width: 100%">
+				<label>OLT</label>
+				<md-select ng-model="oltIdSelected" ng-change="oltSelectedEvent(oltIdSelected)">
+					<md-option ng-repeat="_olt in olt track by _olt.id" ng-value="_olt.id">
+						{{_olt.label}} | {{_olt.ipAddress}}
+					</md-option>
+				</md-select>
+			</md-input-container>
+			<md-table-container ng-show="oltIdSelected">
+				<table md-table>
+					<thead md-head>
+						<tr md-row>
+							<th md-column>ID</th>
+							<th md-column>Name</th>
+							<th md-column md-numeric>CIR</th>
+							<th md-column md-numeric>PIR</th>
+							<th md-column md-numeric>PBS</th>
+							<th md-column md-numeric>CBS</th>
+							<th md-column md-numeric flex="10">Action</th>
+						</tr>
+					</thead>
+					<tbody md-body>
+						<tr md-row ng-repeat="x in powers">
+							<td md-cell>{{x.id}}</td>
+							<td md-cell>{{x.name}}</td>
+							<td md-cell>{{x.cir}}</td>
+							<td md-cell>{{x.pir}}</td>
+							<td md-cell>{{x.pbs}}</td>
+							<td md-cell>{{x.cbs}}</td>
+							<td md-cell>
+								<md-button class="md-primary md-raised" style="margin-right:0px"
+									ng-click="edit(x, $event)">Edit</md-button>
+								<md-button class="md-primary md-raised" style="margin-right:0px"
+									ng-click="remove(x, $event)">Delete</md-button>
+							</td>
+						</tr>
+
+					</tbody>
+				</table>
+			</md-table-container>
+		</md-card-content>
 	</md-card>
 </md-content>
