--- a/partials/dba.html
+++ b/partials/dba.html
@@ -1,4 +1,4 @@
-<md-content class="md-padding" layout="row" layout-align="center center" layout-fill>
+<md-content class="md-padding" layout="row" layout-align="center">
 	<md-card flex="60">
 		<md-toolbar class="md-table-toolbar md-default">
 			<div class="md-toolbar-tools">
