--- a/partials/line.html
+++ b/partials/line.html
@@ -4,57 +4,64 @@
 			<div class="md-toolbar-tools">
 				<h2 class="md-title">Line Profile</h2>
 				<div flex></div>
-				<md-button class="md-icon-button" aria-label="Filter"
-					ng-click="add($event)"> 
+				<md-button class="md-icon-button" aria-label="Filter" ng-click="add($event)" ng-show="oltIdSelected">
 					<md-icon class="material-icons">add</md-icon>
 				</md-button>
 			</div>
 		</md-toolbar>
-		<md-table-container>
-			<table md-table class="bordered">
-				<thead md-head>
-					<tr md-row>
-						<th md-column rowspan="2" class="border-top">ID</th>
-						<th md-column rowspan="2" class="border-top">Name</th>
-						<th md-column colspan="2" class="border-top" style="text-align:center">TCONT</th>
-						<th md-column colspan="6" class="border-top" style="text-align:center">GEM</th>
-						<th md-column rowspan="2" class="border-top" flex="10">Action</th>
-					</tr>
-					<tr md-row>
-						<th md-column class="border-top force-border-left">ID</th>
-						<th md-column class="border-top">DBA Profile ID</th>
-						<th md-column class="border-top">ID</th>
-						<th md-column class="border-top">TCONT ID</th>
-						<th md-column class="border-top">Downstream Policy Profile ID</th>
-						<th md-column class="border-top">Upstream Policy Profile ID</th>
-						<th md-column class="border-top">Mapping</th>
-						<th md-column class="border-top">VLAN</th>
-					</tr>
-				</thead>
-				<tbody md-body>
-					<tr md-row ng-repeat="x in powers">
-						<td md-cell rowspan="{{x.height}}"  ng-if="x.id">{{x.id}}</td>
-						<td md-cell rowspan="{{x.height}}"  ng-if="x.id">{{x.name}}</td>
-						<td md-cell class="force-border-left">{{x.tcont.id}}</td>
-						<td md-cell>{{x.tcont.dbaProfileId}}</td>
-						<td md-cell>{{x.gem.id}}</td>
-						<td md-cell>{{x.gem.tcontId}}</td>
-						<td md-cell>{{x.gem.downstreamPolicyProfileId}}</td>
-						<td md-cell>{{x.gem.upstreamPolicyProfileId}}</td>
-						<td md-cell>{{x.gem.mapping}}</td>
-						<td md-cell>{{x.gem.vlan}}</td>
-						<td md-cell rowspan="{{x.height}}" ng-if="x.id">
-							<md-button class="md-primary md-raised" 
-								style="margin-right:0px"
-								ng-click="edit(x.index, $event)">Edit</md-button>
-							<md-button class="md-primary md-raised" 
-								style="margin-right:0px"
-								ng-click="remove(x, $event)">Delete</md-button>
-						</td>
-					</tr>
-					
-				</tbody>
-			</table>
-		</md-table-container>
+		<md-card-content>
+			<md-input-container style="width: 100%">
+				<label>OLT</label>
+				<md-select ng-model="oltIdSelected" ng-change="oltSelectedEvent(oltIdSelected)">
+					<md-option ng-repeat="_olt in olt track by _olt.id" ng-value="_olt.id">
+						{{_olt.label}} | {{_olt.ipAddress}}
+					</md-option>
+				</md-select>
+			</md-input-container>
+			<md-table-container ng-show="oltIdSelected">
+				<table md-table class="bordered">
+					<thead md-head>
+						<tr md-row>
+							<th md-column rowspan="2" class="border-top">ID</th>
+							<th md-column rowspan="2" class="border-top">Name</th>
+							<th md-column colspan="2" class="border-top" style="text-align:center">TCONT</th>
+							<th md-column colspan="6" class="border-top" style="text-align:center">GEM</th>
+							<th md-column rowspan="2" class="border-top" flex="10">Action</th>
+						</tr>
+						<tr md-row>
+							<th md-column class="border-top force-border-left">ID</th>
+							<th md-column class="border-top">DBA Profile ID</th>
+							<th md-column class="border-top">ID</th>
+							<th md-column class="border-top">TCONT ID</th>
+							<th md-column class="border-top">Downstream Policy Profile ID</th>
+							<th md-column class="border-top">Upstream Policy Profile ID</th>
+							<th md-column class="border-top">Mapping</th>
+							<th md-column class="border-top">VLAN</th>
+						</tr>
+					</thead>
+					<tbody md-body>
+						<tr md-row ng-repeat="x in powers">
+							<td md-cell rowspan="{{x.height}}" ng-if="x.id">{{x.id}}</td>
+							<td md-cell rowspan="{{x.height}}" ng-if="x.id">{{x.name}}</td>
+							<td md-cell class="force-border-left">{{x.tcont.id}}</td>
+							<td md-cell>{{x.tcont.dbaProfileId}}</td>
+							<td md-cell>{{x.gem.id}}</td>
+							<td md-cell>{{x.gem.tcontId}}</td>
+							<td md-cell>{{x.gem.downstreamPolicyProfileId}}</td>
+							<td md-cell>{{x.gem.upstreamPolicyProfileId}}</td>
+							<td md-cell>{{x.gem.mapping}}</td>
+							<td md-cell>{{x.gem.vlan}}</td>
+							<td md-cell rowspan="{{x.height}}" ng-if="x.id">
+								<md-button class="md-primary md-raised" style="margin-right:0px"
+									ng-click="edit(x.index, $event)">Edit</md-button>
+								<md-button class="md-primary md-raised" style="margin-right:0px"
+									ng-click="remove(x, $event)">Delete</md-button>
+							</td>
+						</tr>
+
+					</tbody>
+				</table>
+			</md-table-container>
+		</md-card-content>
 	</md-card>
 </md-content>
