update tampilan bandwidth, monitor, reboot, register, suspend, unregister

--- a/partials/monitor.html
+++ b/partials/monitor.html
@@ -1,21 +1,4 @@
-<md-content class="md-padding" layout="row" layout-align="center center" layout-fill>
-	<!-- <md-card flex>
-		<md-toolbar class="md-table-toolbar md-default">
-			<div class="md-toolbar-tools">
-				<h2 class="md-title">Menu</h2>
-			</div>
-		</md-toolbar>
-		<md-card-content>
-			<md-input-container style="width: 100%">
-				<label>OLT</label>
-				<md-select ng-model="oltIdSelected" ng-change="oltSelectedEvent(oltIdSelected)">
-					<md-option ng-repeat="_olt in olt track by _olt.id" ng-value="_olt.id">
-						{{_olt.label}} | {{_olt.ipAddress}}
-					</md-option>
-				</md-select>
-			</md-input-container>
-		</md-card-content>
-	</md-card> -->
+<md-content class="md-padding" layout="row" layout-align="center">
 	<md-card flex="40">
 		<md-toolbar class="md-table-toolbar md-default">
 			<div class="md-toolbar-tools">
