--- a/partials/dashboard.html
+++ b/partials/dashboard.html
@@ -54,65 +54,11 @@
 						</md-card>
 					</md-content>
 				</md-tab>
-				<!-- <md-tab label="History">
+				<md-tab label="History">
 					<md-card flex style="margin:0">
-						<md-card-content layout="row">
-							<div layout="row">
-								<div style="position:relative; margin-right:-184px; visibility:hidden">
-									<md-datepicker ng-model="weekpicker" md-is-open="weekopen" ng-change="pickWeek()"
-										md-max-date="startdate.todaypicker">
-									</md-datepicker>
-								</div>
-								<md-button class="md-raised with-arrow" flex ng-click="pickWeek(true)"
-									ng-class="{'md-primary':period=='week'}">
-									{{weekdisplay}}
-								</md-button>
-								<md-button class="md-raised arrow" ng-class="{'md-primary':period=='week'}" ng-click="weekopen = true">
-									<md-icon>arrow_drop_down</md-icon>
-								</md-button>
-							</div>
-							<div layout="row">
-								<div style="position:relative; margin-right:-184px; visibility:hidden">
-									<md-datepicker ng-model="monthpicker" md-is-open="monthopen" md-mode="month" ng-change="pickMonth()"
-										md-max-date="startdate.todaypicker">
-									</md-datepicker>
-								</div>
-								<md-button class="md-raised with-arrow" flex ng-click="pickMonth(true)"
-									ng-class="{'md-primary':period=='month'}">
-									{{monthdisplay}}
-								</md-button>
-								<md-button class="md-raised arrow" ng-class="{'md-primary':period=='month'}"
-									ng-click="monthopen = true">
-									<md-icon>arrow_drop_down</md-icon>
-								</md-button>
-							</div>
-							<div layout="row">
-								<md-button class="md-raised with-arrow" ng-click="pickYear(true)"
-									ng-class="{'md-primary':period=='year'}">
-									{{yeardisplay}}
-								</md-button>
-								<md-menu>
-									<md-button class="md-raised arrow" ng-class="{'md-primary':period=='year'}"
-										ng-click="openMenu($mdMenu, $event)">
-										<md-icon>arrow_drop_down</md-icon>
-									</md-button>
-									<md-menu-content>
-										<md-menu-item ng-repeat="x in yearuntil2018">
-											<md-button ng-click="pickYear2(x.value)">
-												{{x.display}}
-											</md-button>
-										</md-menu-item>
-									</md-menu-content>
-								</md-menu>
-							</div>
-							<span flex></span>
-							<md-button ng-click="download()" class="md-primary md-raised">
-								Download
-							</md-button>
-						</md-card-content>
 						<md-table-container>
 							<table md-table>
-								<thead md-head md-order="filtered.order">
+								<thead md-head>
 									<tr md-row>
 										<th md-column>Device</th>
 										<th md-column>Region</th>
@@ -123,27 +69,25 @@
 									</tr>
 								</thead>
 								<tbody md-body>
-									<tr ng-show="filtered.data.length == 0">
+									<tr ng-show="dataHistory.length === 0">
 										<td colspan="4" md-row style="padding:24px;text-align:center">
 											No Data Available.
 										</td>
 									</tr>
-									<tr md-row
-										ng-repeat="m in filtered.data | limitTo: filtered.limit : (filtered.page - 1) * filtered.limit">
-										<td md-cell> {{devicemap[m.ontId].snOnu}} </td>
-										<td md-cell> {{devicemap[m.ontId].region}} </td>
-										<td md-cell> {{devicemap[m.ontId].address}} </td>
-										<td md-cell> {{model.packmap[m.changedPolicyId].name}} </td>
-										<td md-cell> {{m.startDate | date :'dd MMMM yyyy HH:mm'}} </td>
-										<td md-cell> {{m.endDate | date :'dd MMMM yyyy HH:mm'}} </td>
+									<tr md-row ng-repeat="_dataHistory in dataHistory" class="selectable">
+										<td md-cell> {{_dataHistory.view.device}} </td>
+										<td md-cell> {{_dataHistory.view.region}} </td>
+										<td md-cell> {{_dataHistory.view.address}} </td>
+										<td md-cell> {{_dataHistory.view.package}} </td>
+										<td md-cell> {{_dataHistory.view.startDate | date :'dd MMMM yyyy HH:mm'}} </td>
+										<td md-cell> {{_dataHistory.view.expiredDate | date :'dd MMMM yyyy HH:mm'}}
+										</td>
 									</tr>
 								</tbody>
 							</table>
 						</md-table-container>
-						<md-table-pagination md-limit="filtered.limit" md-page="filtered.page" md-total="{{filtered.data.length}}"
-							md-page-select></md-table-pagination>
 					</md-card>
-				</md-tab> -->
+				</md-tab>
 			</md-tabs>
 		</md-card>
 	</md-content>
